Bold text, fix horizontal scroll, clean data files and folder structure

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ footer{
 }
 
 #map-chart{
-    width: 100%;
+    width: 80%;
     float: middle;
     color: #2C3531;
 }
